# tiny-math-service

./: .devcontainer.json  pyproject.toml
.github/workflows/: python-app.yml
my_tiny_service/: main.py
my_tiny_service/api/: api.py  dependencies.py  settings.py
my_tiny_service/api/routers/: maths.py  root.py
tests/: conftest.py  test_api.py
