[tool.poetry]
name = "my-tiny-service"
version = "0.1"
description = ""
authors = ["Artem Moskvin <artemm@spotify.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
pytest = "^8.0.1"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
